--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@500&family=Poppins:wght@600&display=swap');
     </style>
-    <title>StatGram</title>
+    <title>WordMix</title>
     <style>
        a {
     color: var(--slateful);
