--- a/home.html
+++ b/home.html
@@ -138,7 +138,7 @@
         <div class="home-link">
             <h2>Learn something new.</h2>
             <h2 class="links"><a href="words.html">Learn New Words</a></h2>
-            <h2 class="links"><a href="read.html">Synonym Generator</a></h2>
+            <h2 class="links"><a href="synonym.html">Synonym Generator</a></h2>
 
         </div>
 
